// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerWraper is working properly 1`] = `
<div
  className="drawer-pf drawer-pf-notifications-non-clickable"
>
  <div
    className="drawer-pf-title"
  >
    <a
      className="drawer-pf-toggle-expand"
      onClick={[MockFunction]}
    />
    <a
      className="drawer-pf-close"
      onClick={[Function]}
    >
      <span
        aria-hidden={true}
        className="fa fa-close"
      />
    </a>
    <h3
      className="text-center"
    >
      Notifications
    </h3>
  </div>
  <div
    className="panel-group"
    id="notification-drawer-accordion"
  >
    <div
      className="panel panel-default expanded"
    >
      <div
        className="panel-heading"
        onClick={[Function]}
      >
        <h4
          className="panel-title"
        >
          <a
            className=""
          >
            Notification Tab 1
          </a>
        </h4>
        <span
          className="panel-counter"
        >
          2 New Events
        </span>
      </div>
      <div
        aria-expanded={null}
        className="panel-collapse collapse in collapse in"
        id="1"
      >
        <div
          className="panel-body"
        >
          <div
            className="drawer-pf-notification unread"
          >
            <div
              className="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
            >
              <button
                aria-expanded={false}
                aria-haspopup={true}
                className="dropdown-toggle btn btn-link"
                disabled={false}
                id={0}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                type="button"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-ellipsis-v"
                />
              </button>
              <ul
                aria-labelledby={0}
                className="dropdown-menu-right dropdown-menu"
                role="menu"
              >
                <li
                  className=""
                  role="presentation"
                  style={undefined}
                >
                  <a
                    href="#"
                    id="notification-kebab-0"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="menuitem"
                    tabIndex="-1"
                  >
                    Open
                  </a>
                </li>
                <li
                  className="divider"
                  onKeyDown={[Function]}
                  role="separator"
                  style={undefined}
                />
                <li
                  className=""
                  role="presentation"
                  style={undefined}
                >
                  <a
                    href="#"
                    id="notification-kebab-hide"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="menuitem"
                    tabIndex="-1"
                  >
                    Hide this notification
                  </a>
                </li>
              </ul>
            </div>
            <span
              aria-hidden="true"
              className="pficon pficon-info pull-left"
            />
            <div
              className="drawer-pf-notification-content"
            >
              <span
                className="drawer-pf-notification-message"
                onClick={[Function]}
              >
                Foreman Community Newsletter - January 2019
              </span>
              <div
                className="drawer-pf-notification-info"
              >
                <span
                  className="date"
                >
                  2012-3-13
                </span>
                <span
                  className="time"
                >
                  14:30:37
                </span>
              </div>
            </div>
          </div>
          <div
            className="drawer-pf-notification"
          >
            <div
              className="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
            >
              <button
                aria-expanded={false}
                aria-haspopup={true}
                className="dropdown-toggle btn btn-link"
                disabled={false}
                id={1}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                type="button"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-ellipsis-v"
                />
              </button>
              <ul
                aria-labelledby={1}
                className="dropdown-menu-right dropdown-menu"
                role="menu"
              >
                <li
                  className=""
                  role="presentation"
                  style={undefined}
                >
                  <a
                    href="#"
                    id="notification-kebab-0"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="menuitem"
                    tabIndex="-1"
                  >
                    Open
                  </a>
                </li>
                <li
                  className="divider"
                  onKeyDown={[Function]}
                  role="separator"
                  style={undefined}
                />
                <li
                  className=""
                  role="presentation"
                  style={undefined}
                >
                  <a
                    href="#"
                    id="notification-kebab-hide"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="menuitem"
                    tabIndex="-1"
                  >
                    Hide this notification
                  </a>
                </li>
              </ul>
            </div>
            <span
              aria-hidden="true"
              className="pficon pficon-warning-triangle-o pull-left"
            />
            <div
              className="drawer-pf-notification-content"
            >
              <span
                className="drawer-pf-notification-message"
                onClick={[Function]}
              >
                Foreman Community Newsletter - January 2019
              </span>
              <div
                className="drawer-pf-notification-info"
              >
                <span
                  className="date"
                >
                  2019-3-13
                </span>
                <span
                  className="time"
                >
                  14:30:37
                </span>
              </div>
            </div>
          </div>
          <div
            className="drawer-pf-notification"
          >
            <div
              className="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
            >
              <button
                aria-expanded={false}
                aria-haspopup={true}
                className="dropdown-toggle btn btn-link"
                disabled={false}
                id={2}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                type="button"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-ellipsis-v"
                />
              </button>
              <ul
                aria-labelledby={2}
                className="dropdown-menu-right dropdown-menu"
                role="menu"
              >
                <li
                  className=""
                  role="presentation"
                  style={undefined}
                >
                  <a
                    href="#"
                    id="notification-kebab-0"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="menuitem"
                    tabIndex="-1"
                  >
                    Open
                  </a>
                </li>
                <li
                  className="divider"
                  onKeyDown={[Function]}
                  role="separator"
                  style={undefined}
                />
                <li
                  className=""
                  role="presentation"
                  style={undefined}
                >
                  <a
                    href="#"
                    id="notification-kebab-hide"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="menuitem"
                    tabIndex="-1"
                  >
                    Hide this notification
                  </a>
                </li>
              </ul>
            </div>
            <span
              aria-hidden="true"
              className="pficon pficon-ok pull-left"
            />
            <div
              className="drawer-pf-notification-content"
            >
              <span
                className="drawer-pf-notification-message"
                onClick={[Function]}
              >
                Foreman Community Newsletter - January 2029
              </span>
              <div
                className="drawer-pf-notification-info"
              >
                <span
                  className="date"
                >
                  2018-3-13
                </span>
                <span
                  className="time"
                >
                  14:30:37
                </span>
              </div>
            </div>
          </div>
          <div
            className="drawer-pf-notification unread"
          >
            <div
              className="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
            >
              <button
                aria-expanded={false}
                aria-haspopup={true}
                className="dropdown-toggle btn btn-link"
                disabled={false}
                id={3}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                type="button"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-ellipsis-v"
                />
              </button>
              <ul
                aria-labelledby={3}
                className="dropdown-menu-right dropdown-menu"
                role="menu"
              >
                <li
                  className=""
                  role="presentation"
                  style={undefined}
                >
                  <a
                    href="#"
                    id="notification-kebab-0"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="menuitem"
                    tabIndex="-1"
                  >
                    Open
                  </a>
                </li>
                <li
                  className="divider"
                  onKeyDown={[Function]}
                  role="separator"
                  style={undefined}
                />
                <li
                  className=""
                  role="presentation"
                  style={undefined}
                >
                  <a
                    href="#"
                    id="notification-kebab-hide"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="menuitem"
                    tabIndex="-1"
                  >
                    Hide this notification
                  </a>
                </li>
              </ul>
            </div>
            <span
              aria-hidden="true"
              className="pficon pficon-error-circle-o pull-left"
            />
            <div
              className="drawer-pf-notification-content"
            >
              <span
                className="drawer-pf-notification-message"
                onClick={[Function]}
              >
                Foreman Community Newsletter - January 2029
              </span>
              <div
                className="drawer-pf-notification-info"
              >
                <span
                  className="date"
                >
                  2018-3-13
                </span>
                <span
                  className="time"
                >
                  14:30:37
                </span>
              </div>
            </div>
          </div>
          <div
            className="drawer-pf-action"
          >
            <div
              className="drawer-pf-action-link drawer-pf-action-link"
              data-toggle="mark-all-read"
              onClick={[Function]}
            >
              <button
                className="btn btn-link"
                disabled={false}
                type="button"
              >
                Mark All Read
              </button>
            </div>
            <div
              className="drawer-pf-action-link"
              data-toggle="clear-all"
              onClick={[Function]}
            >
              <button
                className="btn btn-link"
                disabled={false}
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="pficon pficon-close"
                />
                Clear All
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PanelWraper is working properly 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
    onClick={[Function]}
  >
    <h4
      className="panel-title"
    >
      <a
        className="collapsed"
      />
    </h4>
    <span
      className="panel-counter"
    >
      2 New Events
    </span>
  </div>
  <div
    aria-expanded={null}
    className="panel-collapse collapse"
    id="1"
  >
    <div
      className="panel-body"
    >
      <div
        className="drawer-pf-notification unread"
      >
        <div
          className="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle btn btn-link"
            disabled={false}
            id={0}
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            type="button"
          >
            <span
              aria-hidden={true}
              className="fa fa-ellipsis-v"
            />
          </button>
          <ul
            aria-labelledby={0}
            className="dropdown-menu-right dropdown-menu"
            role="menu"
          >
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                id="notification-kebab-0"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Open
              </a>
            </li>
            <li
              className="divider"
              onKeyDown={[Function]}
              role="separator"
              style={undefined}
            />
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                id="notification-kebab-hide"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Hide this notification
              </a>
            </li>
          </ul>
        </div>
        <span
          aria-hidden="true"
          className="pficon pficon-info pull-left"
        />
        <div
          className="drawer-pf-notification-content"
        >
          <span
            className="drawer-pf-notification-message"
            onClick={[Function]}
          >
            Foreman Community Newsletter - January 2019
          </span>
          <div
            className="drawer-pf-notification-info"
          >
            <span
              className="date"
            >
              2012-3-13
            </span>
            <span
              className="time"
            >
              14:30:37
            </span>
          </div>
        </div>
      </div>
      <div
        className="drawer-pf-notification"
      >
        <div
          className="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle btn btn-link"
            disabled={false}
            id={1}
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            type="button"
          >
            <span
              aria-hidden={true}
              className="fa fa-ellipsis-v"
            />
          </button>
          <ul
            aria-labelledby={1}
            className="dropdown-menu-right dropdown-menu"
            role="menu"
          >
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                id="notification-kebab-0"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Open
              </a>
            </li>
            <li
              className="divider"
              onKeyDown={[Function]}
              role="separator"
              style={undefined}
            />
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                id="notification-kebab-hide"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Hide this notification
              </a>
            </li>
          </ul>
        </div>
        <span
          aria-hidden="true"
          className="pficon pficon-warning-triangle-o pull-left"
        />
        <div
          className="drawer-pf-notification-content"
        >
          <span
            className="drawer-pf-notification-message"
            onClick={[Function]}
          >
            Foreman Community Newsletter - January 2019
          </span>
          <div
            className="drawer-pf-notification-info"
          >
            <span
              className="date"
            >
              2019-3-13
            </span>
            <span
              className="time"
            >
              14:30:37
            </span>
          </div>
        </div>
      </div>
      <div
        className="drawer-pf-notification"
      >
        <div
          className="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle btn btn-link"
            disabled={false}
            id={2}
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            type="button"
          >
            <span
              aria-hidden={true}
              className="fa fa-ellipsis-v"
            />
          </button>
          <ul
            aria-labelledby={2}
            className="dropdown-menu-right dropdown-menu"
            role="menu"
          >
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                id="notification-kebab-0"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Open
              </a>
            </li>
            <li
              className="divider"
              onKeyDown={[Function]}
              role="separator"
              style={undefined}
            />
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                id="notification-kebab-hide"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Hide this notification
              </a>
            </li>
          </ul>
        </div>
        <span
          aria-hidden="true"
          className="pficon pficon-ok pull-left"
        />
        <div
          className="drawer-pf-notification-content"
        >
          <span
            className="drawer-pf-notification-message"
            onClick={[Function]}
          >
            Foreman Community Newsletter - January 2029
          </span>
          <div
            className="drawer-pf-notification-info"
          >
            <span
              className="date"
            >
              2018-3-13
            </span>
            <span
              className="time"
            >
              14:30:37
            </span>
          </div>
        </div>
      </div>
      <div
        className="drawer-pf-notification unread"
      >
        <div
          className="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
        >
          <button
            aria-expanded={false}
            aria-haspopup={true}
            className="dropdown-toggle btn btn-link"
            disabled={false}
            id={3}
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            type="button"
          >
            <span
              aria-hidden={true}
              className="fa fa-ellipsis-v"
            />
          </button>
          <ul
            aria-labelledby={3}
            className="dropdown-menu-right dropdown-menu"
            role="menu"
          >
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                id="notification-kebab-0"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Open
              </a>
            </li>
            <li
              className="divider"
              onKeyDown={[Function]}
              role="separator"
              style={undefined}
            />
            <li
              className=""
              role="presentation"
              style={undefined}
            >
              <a
                href="#"
                id="notification-kebab-hide"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="menuitem"
                tabIndex="-1"
              >
                Hide this notification
              </a>
            </li>
          </ul>
        </div>
        <span
          aria-hidden="true"
          className="pficon pficon-error-circle-o pull-left"
        />
        <div
          className="drawer-pf-notification-content"
        >
          <span
            className="drawer-pf-notification-message"
            onClick={[Function]}
          >
            Foreman Community Newsletter - January 2029
          </span>
          <div
            className="drawer-pf-notification-info"
          >
            <span
              className="date"
            >
              2018-3-13
            </span>
            <span
              className="time"
            >
              14:30:37
            </span>
          </div>
        </div>
      </div>
      <div
        className="drawer-pf-loading text-center unread"
      >
        <div
          className="spinner spinner-xs spinner-inline"
        />
         Loading More
      </div>
      <div
        className="drawer-pf-action"
      >
        <div
          className="drawer-pf-action-link drawer-pf-action-link"
          data-toggle="mark-all-read"
          onClick={[Function]}
        >
          <button
            className="btn btn-link"
            disabled={false}
            type="button"
          >
            Mark All Read
          </button>
        </div>
        <div
          className="drawer-pf-action-link"
          data-toggle="clear-all"
          onClick={[Function]}
        >
          <button
            className="btn btn-link"
            disabled={false}
            type="button"
          >
            <span
              aria-hidden="true"
              className="pficon pficon-close"
            />
            Clear All
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StatefulDrawerWrapper is working properly 1`] = `
<div
  className="drawer-pf drawer-pf-notifications-non-clickable drawer-pf-expanded"
>
  <div
    className="drawer-pf-title"
  >
    <a
      className="drawer-pf-toggle-expand"
      onClick={[Function]}
    />
    <a
      className="drawer-pf-close"
      onClick={[Function]}
    >
      <span
        aria-hidden={true}
        className="fa fa-close"
      />
    </a>
    <h3
      className="text-center"
    >
      Notifications
    </h3>
  </div>
  <div
    className="panel-group"
    id="notification-drawer-accordion"
  >
    <div
      className="panel panel-default expanded"
    >
      <div
        className="panel-heading"
        onClick={[Function]}
      >
        <h4
          className="panel-title"
        >
          <a
            className=""
          >
            Notification Tab 1
          </a>
        </h4>
        <span
          className="panel-counter"
        >
          2 New Events
        </span>
      </div>
      <div
        aria-expanded={null}
        className="panel-collapse collapse in collapse in"
        id="1"
      >
        <div
          className="panel-body"
        >
          <div
            className="drawer-pf-notification unread"
          >
            <div
              className="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
            >
              <button
                aria-expanded={false}
                aria-haspopup={true}
                className="dropdown-toggle btn btn-link"
                disabled={false}
                id={0}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                type="button"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-ellipsis-v"
                />
              </button>
              <ul
                aria-labelledby={0}
                className="dropdown-menu-right dropdown-menu"
                role="menu"
              >
                <li
                  className=""
                  role="presentation"
                  style={undefined}
                >
                  <a
                    href="#"
                    id="notification-kebab-0"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="menuitem"
                    tabIndex="-1"
                  >
                    Open
                  </a>
                </li>
                <li
                  className="divider"
                  onKeyDown={[Function]}
                  role="separator"
                  style={undefined}
                />
                <li
                  className=""
                  role="presentation"
                  style={undefined}
                >
                  <a
                    href="#"
                    id="notification-kebab-hide"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="menuitem"
                    tabIndex="-1"
                  >
                    Hide this notification
                  </a>
                </li>
              </ul>
            </div>
            <span
              aria-hidden="true"
              className="pficon pficon-info pull-left"
            />
            <div
              className="drawer-pf-notification-content"
            >
              <span
                className="drawer-pf-notification-message"
                onClick={[Function]}
              >
                Foreman Community Newsletter - January 2019
              </span>
              <div
                className="drawer-pf-notification-info"
              >
                <span
                  className="date"
                >
                  2012-3-13
                </span>
                <span
                  className="time"
                >
                  14:30:37
                </span>
              </div>
            </div>
          </div>
          <div
            className="drawer-pf-notification"
          >
            <div
              className="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
            >
              <button
                aria-expanded={false}
                aria-haspopup={true}
                className="dropdown-toggle btn btn-link"
                disabled={false}
                id={1}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                type="button"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-ellipsis-v"
                />
              </button>
              <ul
                aria-labelledby={1}
                className="dropdown-menu-right dropdown-menu"
                role="menu"
              >
                <li
                  className=""
                  role="presentation"
                  style={undefined}
                >
                  <a
                    href="#"
                    id="notification-kebab-0"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="menuitem"
                    tabIndex="-1"
                  >
                    Open
                  </a>
                </li>
                <li
                  className="divider"
                  onKeyDown={[Function]}
                  role="separator"
                  style={undefined}
                />
                <li
                  className=""
                  role="presentation"
                  style={undefined}
                >
                  <a
                    href="#"
                    id="notification-kebab-hide"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="menuitem"
                    tabIndex="-1"
                  >
                    Hide this notification
                  </a>
                </li>
              </ul>
            </div>
            <span
              aria-hidden="true"
              className="pficon pficon-warning-triangle-o pull-left"
            />
            <div
              className="drawer-pf-notification-content"
            >
              <span
                className="drawer-pf-notification-message"
                onClick={[Function]}
              >
                Foreman Community Newsletter - January 2019
              </span>
              <div
                className="drawer-pf-notification-info"
              >
                <span
                  className="date"
                >
                  2019-3-13
                </span>
                <span
                  className="time"
                >
                  14:30:37
                </span>
              </div>
            </div>
          </div>
          <div
            className="drawer-pf-notification"
          >
            <div
              className="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
            >
              <button
                aria-expanded={false}
                aria-haspopup={true}
                className="dropdown-toggle btn btn-link"
                disabled={false}
                id={2}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                type="button"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-ellipsis-v"
                />
              </button>
              <ul
                aria-labelledby={2}
                className="dropdown-menu-right dropdown-menu"
                role="menu"
              >
                <li
                  className=""
                  role="presentation"
                  style={undefined}
                >
                  <a
                    href="#"
                    id="notification-kebab-0"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="menuitem"
                    tabIndex="-1"
                  >
                    Open
                  </a>
                </li>
                <li
                  className="divider"
                  onKeyDown={[Function]}
                  role="separator"
                  style={undefined}
                />
                <li
                  className=""
                  role="presentation"
                  style={undefined}
                >
                  <a
                    href="#"
                    id="notification-kebab-hide"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="menuitem"
                    tabIndex="-1"
                  >
                    Hide this notification
                  </a>
                </li>
              </ul>
            </div>
            <span
              aria-hidden="true"
              className="pficon pficon-ok pull-left"
            />
            <div
              className="drawer-pf-notification-content"
            >
              <span
                className="drawer-pf-notification-message"
                onClick={[Function]}
              >
                Foreman Community Newsletter - January 2029
              </span>
              <div
                className="drawer-pf-notification-info"
              >
                <span
                  className="date"
                >
                  2018-3-13
                </span>
                <span
                  className="time"
                >
                  14:30:37
                </span>
              </div>
            </div>
          </div>
          <div
            className="drawer-pf-notification unread"
          >
            <div
              className="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
            >
              <button
                aria-expanded={false}
                aria-haspopup={true}
                className="dropdown-toggle btn btn-link"
                disabled={false}
                id={3}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                type="button"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-ellipsis-v"
                />
              </button>
              <ul
                aria-labelledby={3}
                className="dropdown-menu-right dropdown-menu"
                role="menu"
              >
                <li
                  className=""
                  role="presentation"
                  style={undefined}
                >
                  <a
                    href="#"
                    id="notification-kebab-0"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="menuitem"
                    tabIndex="-1"
                  >
                    Open
                  </a>
                </li>
                <li
                  className="divider"
                  onKeyDown={[Function]}
                  role="separator"
                  style={undefined}
                />
                <li
                  className=""
                  role="presentation"
                  style={undefined}
                >
                  <a
                    href="#"
                    id="notification-kebab-hide"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="menuitem"
                    tabIndex="-1"
                  >
                    Hide this notification
                  </a>
                </li>
              </ul>
            </div>
            <span
              aria-hidden="true"
              className="pficon pficon-error-circle-o pull-left"
            />
            <div
              className="drawer-pf-notification-content"
            >
              <span
                className="drawer-pf-notification-message"
                onClick={[Function]}
              >
                Foreman Community Newsletter - January 2029
              </span>
              <div
                className="drawer-pf-notification-info"
              >
                <span
                  className="date"
                >
                  2018-3-13
                </span>
                <span
                  className="time"
                >
                  14:30:37
                </span>
              </div>
            </div>
          </div>
          <div
            className="drawer-pf-action"
          >
            <div
              className="drawer-pf-action-link drawer-pf-action-link"
              data-toggle="mark-all-read"
              onClick={[Function]}
            >
              <button
                className="btn btn-link"
                disabled={false}
                type="button"
              >
                Mark All Read
              </button>
            </div>
            <div
              className="drawer-pf-action-link"
              data-toggle="clear-all"
              onClick={[Function]}
            >
              <button
                className="btn btn-link"
                disabled={false}
                type="button"
              >
                <span
                  aria-hidden="true"
                  className="pficon pficon-close"
                />
                Clear All
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StatefulToggleDrawerWrapper is working properly 1`] = `
<ul
  className="nav navbar-nav navbar-right navbar-iconic"
>
  <button
    className="btn btn-link"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <span
      aria-describedby="tooltip"
      aria-hidden={true}
      className="fa fa-bell fa-lg"
      style={
        Object {
          "color": "rgb(240, 240, 240)",
          "marginTop": "20px",
        }
      }
    />
  </button>
  <div
    className="drawer-pf drawer-pf-notifications-non-clickable"
  >
    <div
      className="drawer-pf-title"
    >
      <a
        className="drawer-pf-toggle-expand"
        onClick={[Function]}
      />
      <a
        className="drawer-pf-close"
        onClick={[Function]}
      >
        <span
          aria-hidden={true}
          className="fa fa-close"
        />
      </a>
      <h3
        className="text-center"
      >
        Notifications
      </h3>
    </div>
    <div
      className="panel-group"
      id="notification-drawer-accordion"
    >
      <div
        className="panel panel-default expanded"
      >
        <div
          className="panel-heading"
          onClick={[Function]}
        >
          <h4
            className="panel-title"
          >
            <a
              className=""
            >
              Notification Tab 1
            </a>
          </h4>
          <span
            className="panel-counter"
          >
            2 New Events
          </span>
        </div>
        <div
          aria-expanded={null}
          className="panel-collapse collapse in collapse in"
          id="1"
        >
          <div
            className="panel-body"
          >
            <div
              className="drawer-pf-notification unread"
            >
              <div
                className="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
              >
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="dropdown-toggle btn btn-link"
                  disabled={false}
                  id={0}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  type="button"
                >
                  <span
                    aria-hidden={true}
                    className="fa fa-ellipsis-v"
                  />
                </button>
                <ul
                  aria-labelledby={0}
                  className="dropdown-menu-right dropdown-menu"
                  role="menu"
                >
                  <li
                    className=""
                    role="presentation"
                    style={undefined}
                  >
                    <a
                      href="#"
                      id="notification-kebab-0"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="menuitem"
                      tabIndex="-1"
                    >
                      Open
                    </a>
                  </li>
                  <li
                    className="divider"
                    onKeyDown={[Function]}
                    role="separator"
                    style={undefined}
                  />
                  <li
                    className=""
                    role="presentation"
                    style={undefined}
                  >
                    <a
                      href="#"
                      id="notification-kebab-hide"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="menuitem"
                      tabIndex="-1"
                    >
                      Hide this notification
                    </a>
                  </li>
                </ul>
              </div>
              <span
                aria-hidden="true"
                className="pficon pficon-info pull-left"
              />
              <div
                className="drawer-pf-notification-content"
              >
                <span
                  className="drawer-pf-notification-message"
                  onClick={[Function]}
                >
                  Foreman Community Newsletter - January 2019
                </span>
                <div
                  className="drawer-pf-notification-info"
                >
                  <span
                    className="date"
                  >
                    2012-3-13
                  </span>
                  <span
                    className="time"
                  >
                    14:30:37
                  </span>
                </div>
              </div>
            </div>
            <div
              className="drawer-pf-notification"
            >
              <div
                className="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
              >
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="dropdown-toggle btn btn-link"
                  disabled={false}
                  id={1}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  type="button"
                >
                  <span
                    aria-hidden={true}
                    className="fa fa-ellipsis-v"
                  />
                </button>
                <ul
                  aria-labelledby={1}
                  className="dropdown-menu-right dropdown-menu"
                  role="menu"
                >
                  <li
                    className=""
                    role="presentation"
                    style={undefined}
                  >
                    <a
                      href="#"
                      id="notification-kebab-0"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="menuitem"
                      tabIndex="-1"
                    >
                      Open
                    </a>
                  </li>
                  <li
                    className="divider"
                    onKeyDown={[Function]}
                    role="separator"
                    style={undefined}
                  />
                  <li
                    className=""
                    role="presentation"
                    style={undefined}
                  >
                    <a
                      href="#"
                      id="notification-kebab-hide"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="menuitem"
                      tabIndex="-1"
                    >
                      Hide this notification
                    </a>
                  </li>
                </ul>
              </div>
              <span
                aria-hidden="true"
                className="pficon pficon-warning-triangle-o pull-left"
              />
              <div
                className="drawer-pf-notification-content"
              >
                <span
                  className="drawer-pf-notification-message"
                  onClick={[Function]}
                >
                  Foreman Community Newsletter - January 2019
                </span>
                <div
                  className="drawer-pf-notification-info"
                >
                  <span
                    className="date"
                  >
                    2019-3-13
                  </span>
                  <span
                    className="time"
                  >
                    14:30:37
                  </span>
                </div>
              </div>
            </div>
            <div
              className="drawer-pf-notification"
            >
              <div
                className="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
              >
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="dropdown-toggle btn btn-link"
                  disabled={false}
                  id={2}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  type="button"
                >
                  <span
                    aria-hidden={true}
                    className="fa fa-ellipsis-v"
                  />
                </button>
                <ul
                  aria-labelledby={2}
                  className="dropdown-menu-right dropdown-menu"
                  role="menu"
                >
                  <li
                    className=""
                    role="presentation"
                    style={undefined}
                  >
                    <a
                      href="#"
                      id="notification-kebab-0"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="menuitem"
                      tabIndex="-1"
                    >
                      Open
                    </a>
                  </li>
                  <li
                    className="divider"
                    onKeyDown={[Function]}
                    role="separator"
                    style={undefined}
                  />
                  <li
                    className=""
                    role="presentation"
                    style={undefined}
                  >
                    <a
                      href="#"
                      id="notification-kebab-hide"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="menuitem"
                      tabIndex="-1"
                    >
                      Hide this notification
                    </a>
                  </li>
                </ul>
              </div>
              <span
                aria-hidden="true"
                className="pficon pficon-ok pull-left"
              />
              <div
                className="drawer-pf-notification-content"
              >
                <span
                  className="drawer-pf-notification-message"
                  onClick={[Function]}
                >
                  Foreman Community Newsletter - January 2029
                </span>
                <div
                  className="drawer-pf-notification-info"
                >
                  <span
                    className="date"
                  >
                    2018-3-13
                  </span>
                  <span
                    className="time"
                  >
                    14:30:37
                  </span>
                </div>
              </div>
            </div>
            <div
              className="drawer-pf-notification unread"
            >
              <div
                className="dropdown pull-right dropdown-kebab-pf dropdown btn-group"
              >
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="dropdown-toggle btn btn-link"
                  disabled={false}
                  id={3}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="button"
                  type="button"
                >
                  <span
                    aria-hidden={true}
                    className="fa fa-ellipsis-v"
                  />
                </button>
                <ul
                  aria-labelledby={3}
                  className="dropdown-menu-right dropdown-menu"
                  role="menu"
                >
                  <li
                    className=""
                    role="presentation"
                    style={undefined}
                  >
                    <a
                      href="#"
                      id="notification-kebab-0"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="menuitem"
                      tabIndex="-1"
                    >
                      Open
                    </a>
                  </li>
                  <li
                    className="divider"
                    onKeyDown={[Function]}
                    role="separator"
                    style={undefined}
                  />
                  <li
                    className=""
                    role="presentation"
                    style={undefined}
                  >
                    <a
                      href="#"
                      id="notification-kebab-hide"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="menuitem"
                      tabIndex="-1"
                    >
                      Hide this notification
                    </a>
                  </li>
                </ul>
              </div>
              <span
                aria-hidden="true"
                className="pficon pficon-error-circle-o pull-left"
              />
              <div
                className="drawer-pf-notification-content"
              >
                <span
                  className="drawer-pf-notification-message"
                  onClick={[Function]}
                >
                  Foreman Community Newsletter - January 2029
                </span>
                <div
                  className="drawer-pf-notification-info"
                >
                  <span
                    className="date"
                  >
                    2018-3-13
                  </span>
                  <span
                    className="time"
                  >
                    14:30:37
                  </span>
                </div>
              </div>
            </div>
            <div
              className="drawer-pf-action"
            >
              <div
                className="drawer-pf-action-link drawer-pf-action-link"
                data-toggle="mark-all-read"
                onClick={[Function]}
              >
                <button
                  className="btn btn-link"
                  disabled={false}
                  type="button"
                >
                  Mark All Read
                </button>
              </div>
              <div
                className="drawer-pf-action-link"
                data-toggle="clear-all"
                onClick={[Function]}
              >
                <button
                  className="btn btn-link"
                  disabled={false}
                  type="button"
                >
                  <span
                    aria-hidden="true"
                    className="pficon pficon-close"
                  />
                  Clear All
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</ul>
`;

exports[`getIconClass is working properly 1`] = `
<div>
  <span
    aria-hidden="true"
    className="pficon pficon-ok"
  />
  <span
    aria-hidden="true"
    className="pficon pficon-info"
  />
  <span
    aria-hidden="true"
    className="pficon pficon-warning-triangle-o"
  />
</div>
`;
